# voice-commands

./: .gitignore  README.md  pyproject.toml
voice_commands/: __init__.py  __main__.py  main.py
